# serializer version: 1
# name: test_003_ATD_SRx4_finetune
  ImageModelDescriptor(
    architecture=ATDArch(
      id='ATD',
      name='ATD',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=8, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '210dim',
      '16w',
      '256cat',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_101_ATD_light_SRx2_scratch
  ImageModelDescriptor(
    architecture=ATDArch(
      id='ATD',
      name='ATD',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=8, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'light',
      '48dim',
      '16w',
      '128cat',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_102_ATD_light_SRx3_finetune
  ImageModelDescriptor(
    architecture=ATDArch(
      id='ATD',
      name='ATD',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=8, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'light',
      '48dim',
      '16w',
      '128cat',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_103_ATD_light_SRx4_finetune
  ImageModelDescriptor(
    architecture=ATDArch(
      id='ATD',
      name='ATD',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=8, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      'light',
      '48dim',
      '16w',
      '128cat',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
